--- a/ProjekatBaze (1)/ProjekatBaze/findme/package.json
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.7.2",
     "install": "^0.13.0",
