--- a/ProjekatBaze (1)/ProjekatBaze/findme/package.json
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.0",
     "react-st-modal": "^1.1.3",
     "react-switch": "^6.0.0",
+    "react-toast-notifications": "^2.5.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "web-vitals": "^2.1.2"
