--- a/ProjekatBaze (1)/ProjekatBaze/findme/package.json
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/package.json
@@ -18,9 +18,11 @@
     "bootstrap-icons": "^1.7.2",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-st-modal": "^1.1.3",
