--- a/ProjekatBaze (1)/ProjekatBaze/findme/package.json
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
+    "react-notification-timeline": "0.0.9",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-st-modal": "^1.1.3",
